Custom--app/main/default/objects/Acq_Opportunity__c/Acq_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Opportunities for acquisition teams which are created by broker.</description>
    <label>Acq Opportunity</label>
    <nameField>
        <displayFormat>OPTY-{00000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acq Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>