Custom--app/main/default/objects/Acq_Opportunity__c/fields/Accepted_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Contract_Price__c</fullName>
    <label>Accepted Contract Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>