Custom--app/main/default/objects/Acq_Opportunity__c/fields/APN__c.field-meta.xml
<CustomField>
    <fullName>APN__c</fullName>
    <description>Assessor's Parcel Number</description>
    <inlineHelpText>Assessor's Parcel Number</inlineHelpText>
    <label>APN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>