Custom--app/main/default/objects/Acq_Opportunity__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <label>Offer Type (Bid Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Sale</fullName>
                <default>true</default>
                <label>Standard Sale</label>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>