Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Broker_Annual_Rent__c</fullName>
    <formula>Broker_Monthly_Rent__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Annual Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>