Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Broker_Cap_Rate__c</fullName>
    <formula>Broker_PF_NOI__c /  Broker_Cost_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Cap Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>