Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Comps__c.field-meta.xml
<CustomField>
    <fullName>Broker_Comps__c</fullName>
    <label>Broker Market Value Comps</label>
    <type>TextArea</type>
</CustomField>