Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Cont_Exp_SSA__c.field-meta.xml
<CustomField>
    <fullName>Broker_Cont_Exp_SSA__c</fullName>
    <formula>-1*(( Broker_Total_Revenue__c *  Market__r.Control_Pool_Exp__c) +  Market__r.Direct_SSA_Per_Home__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Cont Exp &amp; SSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>