Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Contract_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contract_Comments__c</fullName>
    <label>Broker Contract Comments</label>
    <type>TextArea</type>
</CustomField>