Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Cost_Basis__c.field-meta.xml
<CustomField>
    <fullName>Broker_Cost_Basis__c</fullName>
    <formula>Broker_Offer_Price__c +  Broker_Rehab__c + Broker_Closing_Title_Fees_Est__c + Market__r.Capitalized_Acq_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Cost Basis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>