Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Cost_Basis_as_of_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Broker_Cost_Basis_as_of_Market_Value__c</fullName>
    <formula>Broker_Cost_Basis__c /  Broker_Market_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Cost Basis as % of Market Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>