Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Effective_Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Broker_Effective_Gross_Income__c</fullName>
    <formula>Broker_Total_Revenue__c +  Broker_Fixed_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Effective Gross Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>