Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Effective_Gross_Yield__c.field-meta.xml
<CustomField>
    <fullName>Broker_Effective_Gross_Yield__c</fullName>
    <formula>Broker_Effective_Gross_Income__c /  Broker_Cost_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Effective Gross Yield</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>