Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Fixed_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fixed_Expenses__c</fullName>
    <formula>-1*( Broker_Property_Taxes__c + ( Broker_Monthly_HOA_Dues__c *12) +  Market__r.Insurance_Per_Home__c  +  Pool_Expense__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Fixed Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>