Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Market_Value_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Market_Value_Comments__c</fullName>
    <label>Broker Market Value Comments</label>
    <type>TextArea</type>
</CustomField>