Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Monthly_HOA_Dues__c.field-meta.xml
<CustomField>
    <fullName>Broker_Monthly_HOA_Dues__c</fullName>
    <label>Broker Monthly HOA Dues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>