Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Broker_Monthly_Rent__c</fullName>
    <label>Broker Monthly Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>