Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Offer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Offer_Comments__c</fullName>
    <label>Broker to IH Offer Comments</label>
    <type>TextArea</type>
</CustomField>