Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Offer_Date__c</fullName>
    <label>Broker Offer Date</label>
    <type>Date</type>
</CustomField>