Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Broker_Offer_Price__c</fullName>
    <label>Broker Requested Offer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>