Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Offer_Status__c</fullName>
    <description>Offer status</description>
    <label>Broker Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IH Director Approved</fullName>
            </value>
            <value>
                <fullName>Submitted to Seller</fullName>
            </value>
            <value>
                <fullName>Counteroffer</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>