Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_OI_Conc_BD__c.field-meta.xml
<CustomField>
    <fullName>Broker_OI_Conc_BD__c</fullName>
    <formula>Broker_Rental_Income__c *  Market__r.OI_Conc_BD_as_of_RI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker OI/Conc/BD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>