Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_PF_NOI__c.field-meta.xml
<CustomField>
    <fullName>Broker_PF_NOI__c</fullName>
    <formula>Broker_Effective_Gross_Income__c +  Broker_Cont_Exp_SSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker PF NOI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>