Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Property_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Broker_Property_Taxes__c</fullName>
    <label>Broker Annual Property Taxes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>