Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Rehab_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rehab_Comments__c</fullName>
    <label>Broker Rehab Comments</label>
    <type>TextArea</type>
</CustomField>