Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Rent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rent_Comments__c</fullName>
    <label>Broker Rent Comments</label>
    <type>TextArea</type>
</CustomField>