Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rental_Income__c</fullName>
    <formula>Broker_Annual_Rent__c +  Broker_Vacancy_Loss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Rental Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>