Custom--app/main/default/objects/Acq_Opportunity__c/fields/Broker_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Broker_Total_Revenue__c</fullName>
    <formula>Broker_Rental_Income__c +  Broker_OI_Conc_BD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>