Custom--app/main/default/objects/Acq_Opportunity__c/fields/Bulk_Deal__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Deal__c</fullName>
    <label>Bulk Deal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>