Custom--app/main/default/objects/Acq_Opportunity__c/fields/CSV_Upload__c.field-meta.xml
<CustomField>
    <fullName>CSV_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSV Upload</label>
    <type>Checkbox</type>
</CustomField>