Custom--app/main/default/objects/Acq_Opportunity__c/fields/Current_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_List_Price__c</fullName>
    <label>Current List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>