Custom--app/main/default/objects/Acq_Opportunity__c/fields/Current_Occupancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy_Status__c</fullName>
    <label>Current Occupancy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>