Custom--app/main/default/objects/Acq_Opportunity__c/fields/doSubmitForUnderwriting__c.field-meta.xml
<CustomField>
    <fullName>doSubmitForUnderwriting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doSubmitForUnderwriting</label>
    <type>Checkbox</type>
</CustomField>