Custom--app/main/default/objects/Acq_Opportunity__c/fields/HVAC_Type__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Type__c</fullName>
    <label>HVAC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Evap</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>