Custom--app/main/default/objects/Acq_Opportunity__c/fields/IMG_Analyst__c.field-meta.xml
<CustomField>
    <fullName>IMG_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMG Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Acq_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>