Custom--app/main/default/objects/Acq_Opportunity__c/fields/Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent__c</fullName>
    <label>Listing Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>