Custom--app/main/default/objects/Acq_Opportunity__c/fields/Listing_Agent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Contact__c</fullName>
    <label>Listing Agent Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>