Custom--app/main/default/objects/Acq_Opportunity__c/fields/Listing_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Date__c</fullName>
    <label>Listing Activity Date</label>
    <type>Date</type>
</CustomField>