Custom--app/main/default/objects/Acq_Opportunity__c/fields/Listing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Listing_Notes__c</fullName>
    <label>Listing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>