Custom--app/main/default/objects/Acq_Opportunity__c/fields/Listing_scenario__c.field-meta.xml
<CustomField>
    <fullName>Listing_scenario__c</fullName>
    <label>Listing Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Listing</fullName>
                <default>true</default>
                <label>New Listing</label>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
            <value>
                <fullName>Back to Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>