Custom--app/main/default/objects/Acq_Opportunity__c/fields/Listing_Source__c.field-meta.xml
<CustomField>
    <fullName>Listing_Source__c</fullName>
    <label>Listing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>Off-Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>