Custom--app/main/default/objects/Acq_Opportunity__c/fields/Lot_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Sq_Ft__c</fullName>
    <label>Lot Sq/Ft</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>