Custom--app/main/default/objects/Acq_Opportunity__c/fields/Market2__c.field-meta.xml
<CustomField>
    <fullName>Market2__c</fullName>
    <description>This is entered to accommodate the downstream requirements</description>
    <label>Market2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>