Custom--app/main/default/objects/Acq_Opportunity__c/fields/Occupancy_Status_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status_Acquisition__c</fullName>
    <label>Occupancy Status @ Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Purchased Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>