Custom--app/main/default/objects/Acq_Opportunity__c/fields/Offer_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted_Date__c</fullName>
    <label>Broker Offer Accepted Date</label>
    <type>Date</type>
</CustomField>