Custom--app/main/default/objects/Acq_Opportunity__c/fields/Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Offer_Price__c</fullName>
    <description>To be populated automatically when offer is made</description>
    <label>Approved Offer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>