Custom--app/main/default/objects/Acq_Opportunity__c/fields/Original_Listing_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Listing_Date__c</fullName>
    <label>Original Listing Date</label>
    <type>Date</type>
</CustomField>