Custom--app/main/default/objects/Acq_Opportunity__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 Car Garage</fullName>
                <default>true</default>
                <label>2 Car Garage</label>
            </value>
            <value>
                <fullName>1 Car Garage</fullName>
            </value>
            <value>
                <fullName>3 Car Garage</fullName>
            </value>
            <value>
                <fullName>4+ Car Garage</fullName>
            </value>
            <value>
                <fullName>1 Car Carport</fullName>
            </value>
            <value>
                <fullName>2 Car Carport</fullName>
            </value>
            <value>
                <fullName>3 Car Carport</fullName>
            </value>
            <value>
                <fullName>1 Car Driveway</fullName>
            </value>
            <value>
                <fullName>2 Car Driveway</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>No Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>