Custom--app/main/default/objects/Acq_Opportunity__c/fields/Pool_Expense__c.field-meta.xml
<CustomField>
    <fullName>Pool_Expense__c</fullName>
    <formula>If(Pool__c == true, Market__r.Pool_Exp_Per_Home__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pool Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>