Custom--app/main/default/objects/Acq_Opportunity__c/fields/Property_Access_Comments__c.field-meta.xml
<CustomField>
    <fullName>Property_Access_Comments__c</fullName>
    <label>Property Access Comments</label>
    <type>TextArea</type>
</CustomField>