Custom--app/main/default/objects/Acq_Opportunity__c/fields/Property_Access_Contact__c.field-meta.xml
<CustomField>
    <fullName>Property_Access_Contact__c</fullName>
    <label>Property Access Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>