Custom--app/main/default/objects/Acq_Opportunity__c/fields/Property_Access_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Property_Access_Contact_Phone__c</fullName>
    <label>Property Access Contact Phone</label>
    <type>Phone</type>
</CustomField>