Custom--app/main/default/objects/Acq_Opportunity__c/fields/Property_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Property_Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the property is claimed or not ?</description>
    <label>Property Claimed</label>
    <type>Checkbox</type>
</CustomField>