Custom--app/main/default/objects/Acq_Opportunity__c/fields/Property_Created__c.field-meta.xml
<CustomField>
    <fullName>Property_Created__c</fullName>
    <description>Creation time of the property</description>
    <label>Property Created</label>
    <type>DateTime</type>
</CustomField>