Custom--app/main/default/objects/Acq_Opportunity__c/fields/Property_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address__c</fullName>
    <formula>Address__r.Street__c</formula>
    <label>Property Street Address</label>
    <type>Text</type>
</CustomField>