Custom--app/main/default/objects/Acq_Opportunity__c/fields/Seller_Counteroffer_Price__c.field-meta.xml
<CustomField>
    <fullName>Seller_Counteroffer_Price__c</fullName>
    <label>Seller Counter Offer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>