Custom--app/main/default/objects/Acq_Opportunity__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <description>Auto filled based on Zip code entered</description>
    <label>Submarket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>