Custom--app/main/default/objects/Acq_Opportunity__c/fields/Unique_APN__c.field-meta.xml
<CustomField>
    <fullName>Unique_APN__c</fullName>
    <description>Unique APN</description>
    <formula>APN__c &amp; '-' &amp; Address__r.County__c &amp; '-' &amp; Address__r.State__r.Name</formula>
    <label>Unique APN</label>
    <type>Text</type>
</CustomField>