Custom--app/main/default/objects/Acq_Opportunity__c/recordTypes/After_Submit_for_Underwriting.recordType-meta.xml
<RecordType>
    <fullName>After_Submit_for_Underwriting</fullName>
    <active>true</active>
    <label>After Submit for Underwriting</label>
</RecordType>