Custom--app/main/default/objects/Acq_Opportunity__c/recordTypes/Before_Submit_To_Underwriting.recordType-meta.xml
<RecordType>
    <fullName>Before_Submit_To_Underwriting</fullName>
    <active>true</active>
    <label>Before Submit To Underwriting</label>
</RecordType>