Custom--app/main/default/objects/Acq_Opportunity__c/validationRules/Accepted_Contract_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Contract_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					NOT(ISNULL(Offer_Accepted_Date__c)),
			 	NOT(ISNULL(PRIORVALUE( Accepted_Contract_Price__c))), 
					ISCHANGED( Accepted_Contract_Price__c )
					)</errorConditionFormula>
    <errorMessage>Cannot change the accepted contract price after its approval</errorMessage>
</ValidationRule>