Custom--app/main/default/objects/Acq_Opportunity__c/validationRules/HOA_name_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>HOA_name_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(HOA__c,'Yes'),
				ISBLANK(HOA_Name__c) 
)</errorConditionFormula>
    <errorMessage>HOA name cannot be empty.</errorMessage>
</ValidationRule>